Fixed scrollbar on blog, added style to encounters page

--- a/src/app/components/encounters/encounters.component.scss
+++ b/src/app/components/encounters/encounters.component.scss
@@ -27,6 +27,9 @@
     li {
       padding-top: 0.5rem;
     }
+    li:last-child {
+      padding-bottom: 1rem;
+    }
   }
   button {
     width: 100%;
